force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Activity_Code__c</fullName>
    <description>This field is used to track current activity of a user.</description>
    <label>Activity Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>