force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Activity_Comment__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Activity_Comment__c</fullName>
    <description>This field holds the value of comment entered during performing quick action</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>