force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Age_Before_Reopen__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Age_Before_Reopen__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will record the age of the NC before it was reopened</description>
    <label>Age Before Reopen</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>