force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Batch_Job_Error__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Batch_Job_Error__c</fullName>
    <description>Stores error description if error occurs during batch job.</description>
    <label>Batch Job Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>