force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Batch_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Batch_Job_Status__c</fullName>
    <defaultValue>&apos;Created 9.2 Onwards&apos;</defaultValue>
    <description>Stores the status of batch job.</description>
    <label>Batch Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>