force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Close_Date__c</fullName>
    <description>This field records the date when an NC was closed.</description>
    <inlineHelpText>Date when the NC was closed.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>