force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Closure_Comment__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Closure_Comment__c</fullName>
    <description>the final say regarding the NonConformance&apos;s resolution etc.</description>
    <inlineHelpText>Additional Information relating to the closure of NC</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>