force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Completion_Date_Containment__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Completion_Date_Containment__c</fullName>
    <description>Records when a containment was first submitted and accepted.(completed or completed-approved)</description>
    <inlineHelpText>Date the Containment was completed.</inlineHelpText>
    <label>Containment Completion Date</label>
    <type>Date</type>
</CustomField>