force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Completion_Date_Disposition__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Completion_Date_Disposition__c</fullName>
    <description>Records the date when a disposition was submitted by the user.</description>
    <inlineHelpText>Date the Disposition was completed.</inlineHelpText>
    <label>Disposition Completion Date</label>
    <type>Date</type>
</CustomField>