force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Completion_Date_Investigation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Completion_Date_Investigation__c</fullName>
    <description>Records when an investigation was submitted and completed (completed or completed-approved)</description>
    <inlineHelpText>Date the Investigation was completed.</inlineHelpText>
    <label>Investigation Completion Date</label>
    <type>Date</type>
</CustomField>