force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Completion_Date_Response__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Completion_Date_Response__c</fullName>
    <description>Records when the first response was provided</description>
    <label>Response Completion Date</label>
    <type>Date</type>
</CustomField>