force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Containment_Required__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Containment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that Finding requires Containment.</description>
    <inlineHelpText>Indicates if immediate Containment Actions are required. When checked, at least one containment action must be added to the response.</inlineHelpText>
    <label>Containment Required?</label>
    <type>Checkbox</type>
</CustomField>