force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Corrective_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Corrective_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that Finding requires a Corrective Action.</description>
    <label>Corrective Action</label>
    <type>Checkbox</type>
</CustomField>