force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Cost_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Cost_of_Defect__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The cost incurred because of the defect.</description>
    <inlineHelpText>Cost incurred due to the defect.</inlineHelpText>
    <label>Cost of Defect</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>