force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Defect_Category__c</fullName>
    <description>The category which this defects belong to.</description>
    <inlineHelpText>Identifies the category to which the defect belongs.</inlineHelpText>
    <label>Defect Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>