force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Defect_Code__c</fullName>
    <description>Defect code field that can be entered manually.</description>
    <inlineHelpText>Please add a defect code, if one can not be found using lookup. Note: If lookup is selected, it always overwrites the value in this field.</inlineHelpText>
    <label>Defect / Failure</label>
    <length>80</length>
    <type>Text</type>
</CustomField>