force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Defect_Description__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Defect_Description__c</fullName>
    <description>Description of as to what this defect is about.</description>
    <inlineHelpText>Description of as to what this defect is about.</inlineHelpText>
    <label>Defect Description</label>
    <type>TextArea</type>
</CustomField>