force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Defect_Severity__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Defect_Severity__c</fullName>
    <description>The severity of the defect.</description>
    <inlineHelpText>Severity selected indicates the degree of impact.</inlineHelpText>
    <label>Defect Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Negligible</fullName>
            </value>
            <value>
                <fullName>2 - Low</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - Significant</fullName>
            </value>
            <value>
                <fullName>5 - Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>