force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Defective_Quantity__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Defective_Quantity__c</fullName>
    <description>The total number of items that were found to be defective</description>
    <inlineHelpText>Total quantity for the defect identified.</inlineHelpText>
    <label>Defective Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>