force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Department__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Department__c</fullName>
    <description>Used to record the ID of the queue which is responsible for triaging and analyzing this NC. Since, SF doesn&apos;t support a lookup on Queue, this text field will store queue&apos;s ID. Once a record is submitted for further processing the owner of the record will be changed to the this fields value. This field is deprecated now. Please use SQX_Department__c instead.</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>