force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Description__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Description__c</fullName>
    <description>NC Description</description>
    <inlineHelpText>Detailed description of the problem that the NC will address.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>