force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Disposition_Approval__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Disposition_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records whether approval for disposition is required or not.</description>
    <inlineHelpText>Indicates if an approval is required for Disposition.</inlineHelpText>
    <label>Disposition Approval Required?</label>
    <type>Checkbox</type>
</CustomField>