force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Disposition_Required__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Disposition_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records whether this NC needs/requires a disposition.</description>
    <inlineHelpText>Indicates if the Disposition is required. When checked atleast one Disposition must be performed and all the Impacted Part/Lot quantity must be dispositioned.</inlineHelpText>
    <label>Disposition Required?</label>
    <type>Checkbox</type>
</CustomField>