force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Done_Responding__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Done_Responding__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Internal field to check the condition of completing NC.NC will not be complete till this field is false.</description>
    <label>Done Responding</label>
    <type>Checkbox</type>
</CustomField>