force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Due_Date__c</fullName>
    <description>When is the finding supposed be completed by.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>