force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Due_Date_Containment__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Due_Date_Containment__c</fullName>
    <description>Stores the due date as of which a containment must be provided</description>
    <inlineHelpText>Date the Containment action(s) are due.</inlineHelpText>
    <label>Containment Due Date</label>
    <type>Date</type>
</CustomField>