force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Due_Date_Disposition__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Due_Date_Disposition__c</fullName>
    <description>Records the due date before which disposition must be submitted by.</description>
    <inlineHelpText>Date the Disposition is due.</inlineHelpText>
    <label>Disposition Due Date</label>
    <type>Date</type>
</CustomField>