force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Due_Date_Investigation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Due_Date_Investigation__c</fullName>
    <description>Stores the due date as of which an investigation must be provided</description>
    <inlineHelpText>Date the Investigation is due.</inlineHelpText>
    <label>Investigation Due Date</label>
    <type>Date</type>
</CustomField>