force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Due_Date_Response__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Due_Date_Response__c</fullName>
    <description>Stores the due date as of which a response must be provided</description>
    <label>Acknowledgment Due Date</label>
    <type>Date</type>
</CustomField>