force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Has_Approved_Investigation__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Has_Approved_Investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that there is at least one Approved Investigation for the Finding.</description>
    <label>Has Approved Investigation</label>
    <type>Checkbox</type>
</CustomField>