force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Has_Containment__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Has_Containment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that there is at least one Containment for the Finding.</description>
    <label>Has Containment</label>
    <type>Checkbox</type>
</CustomField>