force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Has_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Has_Corrective_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that there is at least one Corrective Action for the Finding.</description>
    <label>Has Corrective Action</label>
    <type>Checkbox</type>
</CustomField>