force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Initiate_CAPA__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Initiate_CAPA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields tells whether to initiate capa while closing NC or not.</description>
    <label>Initiate CAPA</label>
    <type>Checkbox</type>
</CustomField>