force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Investigation_Approval__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Investigation_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that any Investigation created for the Finding requires approval before it is implemented.</description>
    <inlineHelpText>Indicates if an approval is required for Investigation.</inlineHelpText>
    <label>Investigation Approval Required?</label>
    <type>Checkbox</type>
</CustomField>