force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Investigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that Finding requires Investigation.</description>
    <inlineHelpText>Indicates if the Investigation is required. When checked an Investigation must be performed in order to close the NC.</inlineHelpText>
    <label>Investigation Required?</label>
    <type>Checkbox</type>
</CustomField>