force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Is_Disposition_Complete__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Is_Disposition_Complete__c</fullName>
    <description>This field indicates whether all disposition have been carried out or not.</description>
    <formula>AND( compliancequest__Total_Impacted_Lot_Quantities__c != 0,
 compliancequest__Total_Impacted_Lot_Quantities__c =  compliancequest__Total_Quantities_Disposed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Disposition Complete</label>
    <type>Checkbox</type>
</CustomField>