force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Is_Implement_Reopen__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Is_Implement_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag to check if stage is changed to implement from reopen</description>
    <label>Is Implement Reopen</label>
    <type>Checkbox</type>
</CustomField>