force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if a record is locked</description>
    <inlineHelpText>Checked if a record is locked</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>