force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Lot_Number__c</fullName>
    <description>Represents the lot of the product that was impacted by the NC.</description>
    <inlineHelpText>The nonconforming lot.</inlineHelpText>
    <label>Lot Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>