force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Lot_Quantity__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Lot_Quantity__c</fullName>
    <description>Represents the total quantity of item present in the impacted part.</description>
    <inlineHelpText>The nonconforming quantity for the part impacted.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>