force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__NC_Title__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__NC_Title__c</fullName>
    <description>The title of the NC</description>
    <inlineHelpText>A simple headline summary for the NC.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>