force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Num_of_Incomplete_Actions__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Num_of_Incomplete_Actions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Internally used to identify whether NC record has incomplete actions (when value greater than 0) or not (when value equals 0).</description>
    <label>Number of Incomplete Actions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>