force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Number_of_defects__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Number_of_defects__c</fullName>
    <description>The number of defects present in the object.</description>
    <inlineHelpText>Specify if it is a one or more defects identified for the part impacted.</inlineHelpText>
    <label>No. of Defects</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>