force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Number_of_Draft_Dispositions__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Number_of_Draft_Dispositions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Internally used to identify whether NC record has draft dispositions (when value greater than 0) or not (when value equals 0).</description>
    <label>Number of Draft Dispositions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>