force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Occurrence_Date__c</fullName>
    <description>The date when the issue occurred.</description>
    <inlineHelpText>Date when NC occurred.</inlineHelpText>
    <label>Occurrence Date</label>
    <type>Date</type>
</CustomField>