force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Open_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Open_Date__c</fullName>
    <description>The date when the NC transitioned from Draft -&gt; Open</description>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>