force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Org_Division__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Org_Division__c</fullName>
    <description>This field records division for nonconformance.</description>
    <inlineHelpText>The division that is responsible for the NC.</inlineHelpText>
    <label>Org. Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Division</valueSetName>
    </valueSet>
</CustomField>