force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Org_Site__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Org_Site__c</fullName>
    <description>This field records site for nonconformance.</description>
    <inlineHelpText>The site that is responsible for the NC.</inlineHelpText>
    <label>Org. Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Site</valueSetName>
    </valueSet>
</CustomField>