force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Overdue_Investigation_Days__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Overdue_Investigation_Days__c</fullName>
    <description>Reporting field used to show the number of days a finding&apos;s investigation was overdue by. Negative values indicate submission before due date</description>
    <formula>IF(ISNULL( compliancequest__Completion_Date_Investigation__c ), 
Today(), 
compliancequest__Completion_Date_Investigation__c 
)-  compliancequest__Due_Date_Investigation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Investigation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>