force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Priority__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Priority__c</fullName>
    <description>Amount of attention/urgency the NC requires, ranging from low to high.</description>
    <inlineHelpText>Priority selected indicates the urgency of this NC.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>