force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Probability__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Probability__c</fullName>
    <description>It is a picklist field with values ranging from 1 through 5. It indicates the likelihood of the issue.</description>
    <label>Probability/Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Improbable</fullName>
            </value>
            <value>
                <fullName>2 - Remote</fullName>
            </value>
            <value>
                <fullName>3 - Occasional</fullName>
            </value>
            <value>
                <fullName>4 - Probable</fullName>
            </value>
            <value>
                <fullName>5 - Frequent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>