force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__QMS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__QMS_Reference_Number__c</fullName>
    <description>It refers to the id  of the Finding in some other Quality Management system (other than CQ-SQX) where it was logged.</description>
    <externalId>true</externalId>
    <inlineHelpText>External reference number if there is an artifact created from a 3rd party (supplier, customer, auditor, etc.).</inlineHelpText>
    <label>QMS Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>