force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Rating__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Rating__c</fullName>
    <description>It is the rating given by the customer to the supplier on his resolution of the Finding. It ranges from 1-5 where 1 is considered as ineffective and 5 is considered as ineffective.</description>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>