force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Recommended_Action__c</fullName>
    <description>Action recommended by issuer of the finding</description>
    <inlineHelpText>Specify the action(s) identified to address the NC.</inlineHelpText>
    <label>Recommended Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>