force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Record_Stage__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Record_Stage__c</fullName>
    <description>Host the current stage of the record</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Disposition_Investigate</fullName>
                <label>Disposition/Investigate</label>
            </value>
            <value>
                <fullName>Implement</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Disposition</fullName>
                <isActive>false</isActive>
                <label>Disposition</label>
            </value>
            <value>
                <fullName>Investigate</fullName>
                <isActive>false</isActive>
                <label>Investigate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>