force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Reopen_Date__c</fullName>
    <description>This field will record the date when the NC was reopened</description>
    <label>Reopen Date</label>
    <type>Date</type>
</CustomField>